--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Point-of-View_5310
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Glyn, Elinor
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1762
     wikipedia: http://en.wikipedia.org/wiki/Elinor_Glyn
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5310#The-Point-of-View
 gutenberg_issued: '2004-03-01'
 gutenberg_type: Text
 identifiers:
